# golf-battle-ss

./: pyproject.toml  pyvenv.cfg
Scripts/: activate  activate.bat
src/: main.py
