[tool.poetry]
name = "golf-battle-ss"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pyautogui = "^0.9.54"
keyboard = "^0.13.5"
returns = "^0.22.0"
pynput = "^1.7.6"
pywinctl = "^0.3"
pygetwindow = "^0.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
